# homebrew-sensei

./: .gitignore  CMakeLists.txt  README.md  sensei.m
Formula/: sensei.rb
homebrew/: formula.rb  sensei.rb
